--- a/style.css
+++ b/style.css
@@ -613,6 +613,9 @@ a:hover {
     align-items: center;
     z-index: 1000;
     overflow-y: auto;
+    /* Efek smooth scrolling */
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
 }
 
 .modal-overlay.active {
@@ -668,12 +671,18 @@ a:hover {
     text-align: left;
     max-height: 80vh;
     overflow-y: auto;
+    /* Efek smooth scrolling */
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
 }
 
 .modal-content-list {
     padding: 0.5rem 1.5rem 1.5rem;
     max-height: 500px;
     overflow-y: auto;
+    /* Efek smooth scrolling */
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
 }
 
 .voucher-item {
